--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,10 @@
 
     <repositories>
         <repository>
+          <id>spigot-repo</id>
+          <url>http://hub.spigotmc.org/nexus/content/groups/public/</url>
+        </repository>
+        <repository>
           <id>jitpack.io</id>
           <url>https://jitpack.io</url>
         </repository>
